# bevy_test_souls

./: .gitignore  ANIMATION_MAPPING.md  BLENDER_CONVERSION_GUIDE.md  CLAUDE.md  Cargo.toml  FBX_TO_GLTF_GUIDE.md  README.md  Zenonia.uproject  blender_fbx_to_gltf.py  convert_animations.bat  convert_animations.ps1  convert_animations.py  convert_with_blender.bat  convert_with_blender.ps1  core_retrospect.md  download_fbx2gltf.ps1  download_fbx2gltf_v2.ps1  game_design_document.md  implementation_plan.md  model_switch.md  project_retrospective_report.md  request.json  retrospect.md  warning_logs.txt
.claude/: settings.local.json
Config/: DefaultCrypto.ini  DefaultDeviceProfiles.ini  DefaultEditor.ini  DefaultEditorPerProjectUserSettings.ini  DefaultEditorSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultGameOptions.ini  DefaultGameUserSettings.ini  DefaultInput.ini  DefaultInput.ini.mine  DefaultInput.ini.r164927  DefaultInput.ini.r165000  DefaultScalability.ini  DefaultTerritoryEditor.ini
Python_Scripts/: polygon_counter.py  polygon_counter.spec
Source/: Editor.Target.cs  Zenonia.Target.cs
checkpoint_2025_08_01/: CHECKPOINT_README.md  code_snippets.md  current_issues.md  session_context.md
checkpoint_2025_08_01_v2/: conversation_log.md  quick_reference.md  session_summary.md  technical_details.md
checkpoint_2025_08_01_v3/: camera_system_reference.md  complete_session_log.md  quick_start.md
checkpoint_2025_08_02_animation_system/: animation_fsm_details.md  quick_recovery.md  session_summary.md
reports/: core_retrospect_summary.md
src/: main.rs
(+7137 files in other folders)
